examples/scanner/literals/fail/empty_unicode_curly.axo
const bad = "\u{}"
print(bad)